# MRE-controller-testbed

./: .gitignore  README.md  app.py  generate_diagram.py  plot_eis.py  pyproject.toml  v1-mvp.md
baselines/: generate_baseline.py  open_loop_baseline.json
docs/: Demo.mov
testbed/: __init__.py  controllers.py  eis_analysis.py  faults.py  inference.py  interfaces.py  logging_setup.py  mode_manager.py  plant.py  randles_model.py  scheduler.py
tests/: test_baseline.py  test_controllers.py  test_eis_analysis.py  test_eis_sweep_parser.py  test_extraction_phases.py  test_fault_trip.py  test_inference.py  test_mode_manager.py  test_plant.py  test_recovery_sequence.py  test_scheduler.py
